src/test/ui/lifetime-errors/ex1-return-one-existing-name-if-else-3.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/ex1-return-one-existing-name-if-else-3.rs:12:27
   |
LL |     if x > y { x } else { y } //~ ERROR explicit lifetime
   |                           ^

error[E0621]: explicit lifetime required in parameter type
  --> $DIR/ex1-return-one-existing-name-if-else-3.rs:11:16
   |
LL | fn foo<'a>((x, y): (&'a i32, &i32)) -> &'a i32 {
   |                ^   --------------- help: add explicit lifetime `'a` to type: `(&'a i32, &'a i32)`
   |                |
   |                lifetime `'a` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
